// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configure should render correctly render() should redirect to if no matching platform 1`] = `
<div>
  <div
    className="onboarding-Configure"
  >
    <h2
      style={
        Object {
          "marginBottom": 30,
        }
      }
    >
      Configure your application
    </h2>
    <withProjects(withRouter(ProjectContext))
      orgId="testOrg"
      projectId="project-slug"
      style={
        Object {
          "marginBottom": 30,
        }
      }
    >
      <ProjectDocsContext>
        <ProjectInstallPlatform
          linkPath={[Function]}
          params={
            Object {
              "orgId": "testOrg",
              "platform": "other",
              "projectId": "project-slug",
            }
          }
          platformData={
            Object {
              "hack": "actually set by ProjectDocsContext, this object is here to avoid proptypes warnings",
            }
          }
        />
      </ProjectDocsContext>
    </withProjects(withRouter(ProjectContext))>
    <Waiting
      hasEvent={false}
      organization={
        Object {
          "id": "1337",
          "slug": "testOrg",
          "teams": Array [
            Array [
              "project-slug",
            ],
          ],
        }
      }
      params={
        Object {
          "orgId": "testOrg",
          "platform": "other",
          "projectId": "project-slug",
        }
      }
      skip={[Function]}
    />
  </div>
</div>
`;

exports[`Configure should render correctly render() should render platform docs 1`] = `
<Configure
  next={[Function]}
  params={
    Object {
      "orgId": "testOrg",
      "platform": "node",
      "projectId": "project-slug",
    }
  }
>
  <div>
    <div
      className="onboarding-Configure"
    >
      <h2
        style={
          Object {
            "marginBottom": 30,
          }
        }
      >
        Configure your application
      </h2>
      <withProjects(withRouter(ProjectContext))
        orgId="testOrg"
        projectId="project-slug"
        style={
          Object {
            "marginBottom": 30,
          }
        }
      >
        <withRouter(ProjectContext)
          orgId="testOrg"
          projectId="project-slug"
          projects={
            Array [
              Object {
                "hasAccess": true,
                "id": "testProject",
                "isBookmarked": false,
                "isMember": true,
                "name": "Test Project",
                "slug": "project-slug",
                "teams": Array [
                  Object {
                    "hasAccess": true,
                    "id": "coolid",
                    "slug": "coolteam",
                  },
                ],
              },
            ]
          }
          style={
            Object {
              "marginBottom": 30,
            }
          }
        >
          <ProjectContext
            location={
              Object {
                "query": Object {},
              }
            }
            orgId="testOrg"
            projectId="project-slug"
            projects={
              Array [
                Object {
                  "hasAccess": true,
                  "id": "testProject",
                  "isBookmarked": false,
                  "isMember": true,
                  "name": "Test Project",
                  "slug": "project-slug",
                  "teams": Array [
                    Object {
                      "hasAccess": true,
                      "id": "coolid",
                      "slug": "coolteam",
                    },
                  ],
                },
              ]
            }
            router={
              Object {
                "createHref": [MockFunction],
                "go": [MockFunction],
                "goBack": [MockFunction],
                "goForward": [MockFunction],
                "isActive": [MockFunction],
                "listen": [MockFunction],
                "location": Object {
                  "query": Object {},
                },
                "push": [MockFunction],
                "replace": [MockFunction],
                "setRouteLeaveHook": [MockFunction],
              }
            }
            style={
              Object {
                "marginBottom": 30,
              }
            }
          >
            <SideEffect(DocumentTitle)
              title="project-slug"
            >
              <DocumentTitle
                title="project-slug"
              >
                <ProjectDocsContext>
                  <ProjectInstallPlatform
                    linkPath={[Function]}
                    params={
                      Object {
                        "orgId": "testOrg",
                        "platform": "node",
                        "projectId": "project-slug",
                      }
                    }
                    platformData={
                      Object {
                        "dsn": "https://9ed7cdc60:20e868d7b@sentry.io/300733",
                        "dsnPublic": "https://9ed7cdc6581145bcb46044b77bd82aa0@sentry.io/300733",
                        "platforms": Array [
                          Object {
                            "id": "javascript",
                            "integrations": Array [
                              Object {
                                "id": "node",
                                "link": "https://docs.getsentry.com/hosted/clients/csharp/",
                                "name": "node",
                                "type": "language",
                              },
                            ],
                            "name": "js",
                          },
                        ],
                      }
                    }
                  >
                    <Panel>
                      <Component
                        className="css-10qfvek-Panel e1laxa7d0"
                      >
                        <div
                          className="css-10qfvek-Panel e1laxa7d0"
                        >
                          <PanelHeader
                            hasButtons={true}
                          >
                            <Component
                              className="css-xm0vov-PanelHeader-getPadding e1p8v8nv0"
                              hasButtons={true}
                            >
                              <Flex
                                align="center"
                                className="css-xm0vov-PanelHeader-getPadding e1p8v8nv0"
                                justify="space-between"
                              >
                                <Base
                                  align="center"
                                  className="e1p8v8nv0 css-13rknte-PanelHeader-getPadding"
                                  justify="space-between"
                                >
                                  <div
                                    className="e1p8v8nv0 css-13rknte-PanelHeader-getPadding"
                                    is={null}
                                  >
                                    Configure node
                                    <Flex>
                                      <Base
                                        className="css-sncxrr"
                                      >
                                        <div
                                          className="css-sncxrr"
                                          is={null}
                                        >
                                          <Box
                                            ml={1}
                                          >
                                            <Base
                                              className="css-re0chm"
                                              ml={1}
                                            >
                                              <div
                                                className="css-re0chm"
                                                is={null}
                                              >
                                                <Button
                                                  disabled={false}
                                                  href="/testOrg/project-slug/getting-started/"
                                                  size="small"
                                                >
                                                  <StyledButton
                                                    aria-label="< Back"
                                                    disabled={false}
                                                    href="/testOrg/project-slug/getting-started/"
                                                    onClick={[Function]}
                                                    role="button"
                                                    size="small"
                                                  >
                                                    <Component
                                                      aria-label="< Back"
                                                      className="css-dkprmi-StyledButton-getColors eqrebog0"
                                                      disabled={false}
                                                      href="/testOrg/project-slug/getting-started/"
                                                      onClick={[Function]}
                                                      role="button"
                                                      size="small"
                                                    >
                                                      <a
                                                        aria-label="< Back"
                                                        className="css-dkprmi-StyledButton-getColors eqrebog0"
                                                        disabled={false}
                                                        href="/testOrg/project-slug/getting-started/"
                                                        onClick={[Function]}
                                                        role="button"
                                                        size="small"
                                                      >
                                                        <ButtonLabel
                                                          size="small"
                                                        >
                                                          <Component
                                                            className="css-7ui8bl-ButtonLabel eqrebog1"
                                                            size="small"
                                                          >
                                                            <span
                                                              className="css-7ui8bl-ButtonLabel eqrebog1"
                                                            >
                                                              &lt; Back
                                                            </span>
                                                          </Component>
                                                        </ButtonLabel>
                                                      </a>
                                                    </Component>
                                                  </StyledButton>
                                                </Button>
                                              </div>
                                            </Base>
                                          </Box>
                                          <Box
                                            ml={1}
                                          >
                                            <Base
                                              className="css-re0chm"
                                              ml={1}
                                            >
                                              <div
                                                className="css-re0chm"
                                                is={null}
                                              >
                                                <Button
                                                  disabled={false}
                                                  external={true}
                                                  href="https://docs.getsentry.com/hosted/clients/csharp/"
                                                  size="small"
                                                >
                                                  <StyledButton
                                                    aria-label="Full Documentation"
                                                    disabled={false}
                                                    external={true}
                                                    href="https://docs.getsentry.com/hosted/clients/csharp/"
                                                    onClick={[Function]}
                                                    role="button"
                                                    size="small"
                                                  >
                                                    <Component
                                                      aria-label="Full Documentation"
                                                      className="css-dkprmi-StyledButton-getColors eqrebog0"
                                                      disabled={false}
                                                      external={true}
                                                      href="https://docs.getsentry.com/hosted/clients/csharp/"
                                                      onClick={[Function]}
                                                      role="button"
                                                      size="small"
                                                    >
                                                      <ExternalLink
                                                        aria-label="Full Documentation"
                                                        className="css-dkprmi-StyledButton-getColors eqrebog0"
                                                        disabled={false}
                                                        href="https://docs.getsentry.com/hosted/clients/csharp/"
                                                        onClick={[Function]}
                                                        rel="noreferrer noopener"
                                                        role="button"
                                                        size="small"
                                                        target="_blank"
                                                      >
                                                        <a
                                                          aria-label="Full Documentation"
                                                          className="css-dkprmi-StyledButton-getColors eqrebog0"
                                                          disabled={false}
                                                          href="https://docs.getsentry.com/hosted/clients/csharp/"
                                                          onClick={[Function]}
                                                          rel="noreferrer noopener"
                                                          role="button"
                                                          size="small"
                                                          target="_blank"
                                                        >
                                                          <ButtonLabel
                                                            size="small"
                                                          >
                                                            <Component
                                                              className="css-7ui8bl-ButtonLabel eqrebog1"
                                                              size="small"
                                                            >
                                                              <span
                                                                className="css-7ui8bl-ButtonLabel eqrebog1"
                                                              >
                                                                Full Documentation
                                                              </span>
                                                            </Component>
                                                          </ButtonLabel>
                                                        </a>
                                                      </ExternalLink>
                                                    </Component>
                                                  </StyledButton>
                                                </Button>
                                              </div>
                                            </Base>
                                          </Box>
                                        </div>
                                      </Base>
                                    </Flex>
                                  </div>
                                </Base>
                              </Flex>
                            </Component>
                          </PanelHeader>
                          <PanelBody
                            direction="column"
                            disablePadding={false}
                            flex={false}
                          >
                            <div
                              className="css-zhfi4l-padding-textStyles"
                            >
                              <TextBlock>
                                <Component
                                  className="css-1geyb25-TextBlock ec8ep340"
                                >
                                  <div
                                    className="css-1geyb25-TextBlock ec8ep340"
                                  >
                                    <span
                                      key="8"
                                    >
                                      <span
                                        key="0"
                                      >
                                        
             This is a quick getting started guide. For in-depth instructions
             on integrating Sentry with 
                                      </span>
                                      <span
                                        key="2"
                                      >
                                        node
                                      </span>
                                      <span
                                        key="3"
                                      >
                                        , view
             
                                      </span>
                                      <a
                                        href="https://docs.getsentry.com/hosted/clients/csharp/"
                                        key="5"
                                      >
                                        <span
                                          key="4"
                                        >
                                          our complete documentation
                                        </span>
                                      </a>
                                      <span
                                        key="6"
                                      >
                                        .
            
                                      </span>
                                    </span>
                                  </div>
                                </Component>
                              </TextBlock>
                              <DocumentationWrapper
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": undefined,
                                  }
                                }
                              >
                                <div
                                  className="css-1y7l4t-DocumentationWrapper e1w9lqpk0"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": undefined,
                                    }
                                  }
                                />
                              </DocumentationWrapper>
                            </div>
                          </PanelBody>
                        </div>
                      </Component>
                    </Panel>
                  </ProjectInstallPlatform>
                </ProjectDocsContext>
              </DocumentTitle>
            </SideEffect(DocumentTitle)>
          </ProjectContext>
        </withRouter(ProjectContext)>
      </withProjects(withRouter(ProjectContext))>
      <Waiting
        hasEvent={false}
        organization={
          Object {
            "id": "1337",
            "projects": Array [
              Object {
                "hasAccess": true,
                "id": "testProject",
                "isBookmarked": false,
                "isMember": true,
                "name": "Test Project",
                "slug": "project-slug",
                "teams": Array [
                  Object {
                    "hasAccess": true,
                    "id": "coolteam",
                    "slug": "coolteam",
                  },
                ],
              },
            ],
            "slug": "testOrg",
            "teams": Array [
              Object {
                "hasAccess": true,
                "id": "coolteam",
                "projects": Array [
                  Object {
                    "id": "testProject",
                    "name": "Test Project",
                    "slug": "project-slug",
                  },
                ],
                "slug": "coolteam",
              },
            ],
          }
        }
        params={
          Object {
            "orgId": "testOrg",
            "platform": "node",
            "projectId": "project-slug",
          }
        }
        skip={[Function]}
      >
        <div
          className="awaiting-event"
        >
          <div
            className="row"
          >
            <div
              className="col-sm-10"
            >
              <div
                className="wrap waiting-text"
              >
                <h3
                  className="animated-ellipsis"
                >
                  Waiting to receive an error
                </h3>
                <div
                  className="robot"
                >
                  <span
                    className="eye"
                  />
                </div>
              </div>
            </div>
            <CenteredButtons
              className="col-sm-2"
            >
              <div
                className="col-sm-2 css-mm32tp-CenteredButtons e1p80ulz0"
              >
                <div
                  className="pull-right"
                >
                  <Button
                    data-test-id="configure-done"
                    disabled={false}
                    onClick={[Function]}
                    priority="primary"
                  >
                    <StyledButton
                      aria-label="All done!"
                      data-test-id="configure-done"
                      disabled={false}
                      onClick={[Function]}
                      priority="primary"
                      role="button"
                    >
                      <Component
                        aria-label="All done!"
                        className="css-1msljz8-StyledButton-getColors eqrebog0"
                        data-test-id="configure-done"
                        disabled={false}
                        onClick={[Function]}
                        priority="primary"
                        role="button"
                      >
                        <button
                          aria-label="All done!"
                          className="css-1msljz8-StyledButton-getColors eqrebog0"
                          data-test-id="configure-done"
                          disabled={false}
                          onClick={[Function]}
                          priority="primary"
                          role="button"
                        >
                          <ButtonLabel
                            priority="primary"
                          >
                            <Component
                              className="css-ga4b18-ButtonLabel eqrebog1"
                              priority="primary"
                            >
                              <span
                                className="css-ga4b18-ButtonLabel eqrebog1"
                              >
                                All done!
                              </span>
                            </Component>
                          </ButtonLabel>
                        </button>
                      </Component>
                    </StyledButton>
                  </Button>
                </div>
              </div>
            </CenteredButtons>
          </div>
        </div>
      </Waiting>
    </div>
  </div>
</Configure>
`;

exports[`Configure should render correctly render() shouldn't redirect for a found platform 1`] = `
<div>
  <div
    className="onboarding-Configure"
  >
    <h2
      style={
        Object {
          "marginBottom": 30,
        }
      }
    >
      Configure your application
    </h2>
    <withProjects(withRouter(ProjectContext))
      orgId="testOrg"
      projectId="project-slug"
      style={
        Object {
          "marginBottom": 30,
        }
      }
    >
      <ProjectDocsContext>
        <ProjectInstallPlatform
          linkPath={[Function]}
          params={
            Object {
              "orgId": "testOrg",
              "platform": "node",
              "projectId": "project-slug",
            }
          }
          platformData={
            Object {
              "hack": "actually set by ProjectDocsContext, this object is here to avoid proptypes warnings",
            }
          }
        />
      </ProjectDocsContext>
    </withProjects(withRouter(ProjectContext))>
    <Waiting
      hasEvent={false}
      organization={
        Object {
          "id": "1337",
          "slug": "testOrg",
          "teams": Array [
            Array [
              "project-slug",
            ],
          ],
        }
      }
      params={
        Object {
          "orgId": "testOrg",
          "platform": "node",
          "projectId": "project-slug",
        }
      }
      skip={[Function]}
    />
  </div>
</div>
`;
